--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Holaaaaa</h1>
-    <select name="Sos gay" id="gay?">
-     <option value="" selected disabled>¿Sos gay?</option>
+    <select name="todo bien" id="gay?">
+     <option value="" selected disabled>¿Todo bien?</option>
      <option value="si">si</option>
      <option value="no">no</option>
     </select>
