--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Holaaaaa</h1>
-    <select name="todo bien" id="gay?">
+    <select name="todo bien" id="¿bien">
      <option value="" selected disabled>¿Todo bien?</option>
      <option value="si">si</option>
      <option value="no">no</option>
